syntax = "proto3";

option csharp_namespace = "BuildingBlock.API.GRPC";

service AuthProvider {
  rpc GetClaimsAsync(ClaimRequest) returns (stream ClaimResponse);
  rpc GetPermissionsAsync(PermissionRequest) returns (PermissionResponse);
}

message ClaimRequest {
}

message PermissionRequest {
  string userId = 1;
}

message PermissionResponse {
  repeated string permissions = 1;
}

message ClaimResponse {
  string type = 1;
  string value = 2;
}